--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,75 +1,4 @@
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0 auto;
+.main-page {
+  margin: 0 0;
   padding: 0 0;
-  // max-width: 1140px;
-  background: $color-light;
-  font-family: $paragraph-font;
-  font-size: 14px;
-  line-height: 1.7;
-  font-weight: $font-normal;
-  color: $color-dark;
-}
-
-.container {
-  max-width: 1000px;
-  margin: 10px auto;
-  padding: 20px 0;
-  background: $color-white;
-}
-
-h1 {
-  font-family: $brand-font;
-  font-size: 26px;
-  font-weight: $font-bold;
-  text-transform: uppercase;
-}
-
-h2 {
-  font-size: 20px;
-  font-weight: $font-semibold;
-  text-transform: uppercase;
-}
-
-h3 {
-  font-size: 18px;
-  font-weight: $font-semibold;
-  text-transform: uppercase;
-}
-
-h4 {
-  font-size: 16px;
-  font-weight: $font-semibold;
-  text-transform: uppercase;
-}
-
-h5 {
-  font-size: 14px;
-  font-weight: $font-semibold;
-  text-transform: uppercase;
-}
-
-p {
-  font-size: 12px;
-  font-weight: $font-normal;
-  text-transform: uppercase;
-}
-
-ul {
-  font-size: $paragraph-font-size;
-
-  li {
-    display: block;
-  }
-}
-
-ol {
-  font-size: $paragraph-font-size;
-
-  li {
-    display: inline-block;
-  }
 }
