--- a/sass/components/_inputs.scss
+++ b/sass/components/_inputs.scss
@@ -21,3 +21,7 @@ input:focus, textarea:focus {
     color: $paragraph-color;
     outline: none;  //doczytac
 }
+
+.component__calendar {
+  // display: table;
+}
