--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -8,7 +8,7 @@ body {
   // max-width: 1140px;
   background: $color-light;
   font-family: $paragraph-font;
-  font-size: 14px;
+  font-size: $font-size;
   line-height: 1.7;
   font-weight: $font-normal;
   color: $color-dark;
@@ -19,6 +19,11 @@ body {
   margin: 10px auto;
   padding: 20px 0;
   background: $color-white;
+  box-shadow: 2px 2px 5px;
+}
+
+section {
+  // box-shadow: 2px 2px 2px 2px $color-dark;
 }
 
 h1 {
@@ -31,25 +36,21 @@ h1 {
 h2 {
   font-size: 20px;
   font-weight: $font-semibold;
-  text-transform: uppercase;
 }
 
 h3 {
   font-size: 18px;
   font-weight: $font-semibold;
-  text-transform: uppercase;
 }
 
 h4 {
   font-size: 16px;
   font-weight: $font-semibold;
-  text-transform: uppercase;
 }
 
 h5 {
   font-size: 14px;
   font-weight: $font-semibold;
-  text-transform: uppercase;
 }
 
 p {
