--- a/sass/components/_inputs.scss
+++ b/sass/components/_inputs.scss
@@ -1,27 +1,23 @@
 input, textarea {
-    padding: 5px;
-    margin: 5px;
-    width: 200px;
-    border: none;
-    border-bottom: 1px solid $color-light;
-    color: $color-light;
+  padding: 5px;
+  margin: 5px;
+  width: 200px;
+  border: none;
+  border-bottom: 1px solid $color-light;
+  color: $color-light;
 }
 
 textarea {
-    height: 200px;
+  height: 200px;
 }
 
 input::placeholder, textarea::placeholder {
-   color: $color-light;
+  color: $color-light;
 }
 
 input:focus, textarea:focus {
-    background: $color-light;
-    border: none;
-    color: $paragraph-color;
-    outline: none;  //doczytac
-}
-
-.component__calendar {
-  // display: table;
+  background: $color-light;
+  border: none;
+  color: $color-black;
+  outline: none;  //doczytac
 }
