--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,8 @@
 @import 'components/inputs';
 @import 'components/icon-text';
 @import 'components/section-part';
+@import 'components/table-row';
+@import 'components/buttons';
 
 /* Sections */
 @import 'sections/sidebar';
