--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,9 +2,10 @@
 $color-black: #000000;
 $brand-main-color: #e67e22;
 $color-light: #ecf0f1;
-$color-dark: #95a5a6;
+$color-dark: #636e72;
 $color-white: #FFFFFF;
 $color-blue: #2980b9;
+$color-deep-dark: #2d3436;
 
 /* Font sizes */
 $paragraph-font-size: 16px;
@@ -12,6 +13,7 @@ $paragraph-font-size: 16px;
 /* Fonts */
 $brand-font: 'Roboto', sans-serif;
 $paragraph-font: 'Roboto', sans-serif;
+$logo-font: 'Ma Shan Zheng', cursive;
 
 $font-light: 300;
 $font-normal: 400;
