--- a/sass/components/_inputs.scss
+++ b/sass/components/_inputs.scss
@@ -19,5 +19,5 @@ input:focus, textarea:focus {
   background: $color-light;
   border: none;
   color: $color-black;
-  outline: none;  //doczytac
+  outline: none;  
 }
