--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,4 +1,8 @@
 .main-page {
-  margin: 0 0;
+  margin: 0 0 0 190px;
   padding: 0 0;
+}
+
+@media (max-width: 767px) {
+  margin: 50px auto 0 auto;
 }
