--- a/sass/sections/_sidebar.scss
+++ b/sass/sections/_sidebar.scss
@@ -1,26 +1,104 @@
 .section__sidebar {
   position: fixed;
   height: 100vh;
+  width: 190px;
   background: $color-black;
-  color: $color-light;
+  color: $color-dark;
   padding: 0 0;
 
   .container {
     background: $color-black;
-    padding: 20px 20px;
+    padding: 10px 0;
     box-shadow: none;
+    margin: 0 auto;
   }
 }
 
 .logo {
   display: flex;
+  color: $color-light;
+  padding-left: 30px;
+  align-items: center;
+  text-align: center;
+
+  h2 {
+    font-family: $logo-font;
+    font-size: 30px;
+  }
 }
 
 .logo-link i {
-  color: $color-light;
-  padding-left: 20px;
+  color: $color-dark;
+  padding-left: 40px;
+  font-size: 20px;
+}
+
+.navigation {
+  margin-top: 0;
+  padding-bottom: 30px;
+  border-bottom: 1px solid $color-deep-dark;
 }
 
 .list li i, .list li a {
-  color: $color-light;
+  color: $color-dark;
+}
+
+.list li a {
+  padding-left: 20px;
+  font-size: $font-size*0.9;
+}
+
+.component__icon-text {
+  padding: 12px 0 10px;
+
+  &:hover {
+    background: $color-deep-dark;
+    border-left: 5px solid $brand-main-color;
+
+    i, a {
+      color: $color-light;
+    }
+
+    a {
+      padding-left: 15px;
+    }
+  }
+}
+
+.manager {
+  padding-left: 20px;
+  padding-top: 5px;
+
+  .manager-name {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-top: 5px;
+  }
+
+  img {
+    width: 45px;
+    border-radius: 40px;
+  }
+
+  .manager-text {
+    padding-left: 10px;
+  }
+}
+
+@media (max-width: 767px) {
+  .section__sidebar {
+    width: 100%;
+    height: auto;
+  }
+
+  .navigation, .manager {
+    display: none;
+  }
+
+  .logo:hover {
+    ~.navigation {
+      display: inline;
+    }
+  }
 }
