--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -5,7 +5,7 @@
 body {
   margin: 0 auto;
   padding: 0 20px;
-  // max-width: 1140px;
+  max-width: 1140px;
   background: $color-light;
   font-family: $paragraph-font;
   font-size: $font-size;
