--- a/sass/sections/_general-statistic.scss
+++ b/sass/sections/_general-statistic.scss
@@ -89,6 +89,11 @@
   padding: 5px;
 }
 
+.inner-wrapper input {
+  border-collapse: collapse;
+  border: 0 solid $color-light;
+}
+
 .chart {
   max-width: 60%;
   margin: 55px auto 0 auto;
@@ -103,11 +108,34 @@
   }
 }
 
+.scroll-wrapper {
+  display: block;
+  width: 70%;
+  overflow-x: auto;
+
+  img {
+    width: auto;
+    max-width: 100%;
+  }
+}
+
+
 /* Links */
+
+.scroll-wrapper {
+  // display: block;
+  // width: 70%;
+  // overflow-x: auto;
+
+  table {
+    width: 100%;
+    max-width: 100%;
+  }
+}
 
 .table-wrapper {
   margin: 40px auto;
-  width: 70%;
+  // width: 70%;
   padding: 5px;
 }
 
