Add mixin with column style

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -5,7 +5,7 @@
 body {
   margin: 0 auto;
   padding: 0 20px;
-  max-width: 1140px;
+  max-width: 1200px;
   background: $color-light;
   font-family: $paragraph-font;
   font-size: $font-size;
@@ -15,12 +15,84 @@ body {
 }
 
 .container {
-  // max-width: 800px;
+  width: 100%;
+  max-width: 1170px;
   margin: 20px auto;
-  padding: 20px 0;
+  padding: 20px 15px;
   background: $color-white;
   box-shadow: 2px 2px 5px;
 }
+
+.container-fluid {
+  width: 100%;
+  // padding-left: 15px;
+  // padding-right: 15px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap; //układa elementy po kolei tworząc w miarę potrzeb kolejne wiersze
+}
+
+// .col-sm-1 {
+//   flex: 0 0 8.33333%;
+//   max-width: 8.33333%;
+// }
+//
+// .col-sm-2 {
+//   flex: 0 0 16.66667%;
+//   max-width: 16.66667%;
+// }
+//
+// .col-sm-3 {
+//   flex: 0 0 25%;
+//   max-width: 25%;
+// }
+//
+// .col-sm-4 {
+//   flex: 0 0 33.33%;
+//   max-width: 33.33%;
+// }
+//
+// .col-sm-5 {
+//   flex: 0 0 41.66%;
+//   max-width: 41.66%;
+// }
+//
+// .col-sm-6 {
+//   flex: 0 0 50%;
+//   max-width: 50%;
+// }
+//
+// .col-sm-7 {
+//   flex: 0 0 58.33%;
+//   max-width: 58.33%;
+// }
+//
+// .col-sm-8 {
+//   flex: 0 0 66.66%;
+//   max-width: 66.66%;
+// }
+//
+// .col-sm-9 {
+//   flex: 0 0 75%;
+//   max-width: 75%;
+// }
+//
+// .col-sm-10 {
+//   flex: 0 0 83.33%;
+//   max-width: 83.33%;
+// }
+//
+// .col-sm-11 {
+//   flex: 0 0 91.66%;
+//   max-width: 91.66%;
+// }
+//
+// .col-sm-12 {
+//   flex: 0 0 100%;
+//   max-width: 100%;
+// }
 
 h1 {
   font-family: $brand-font;
