--- a/css/style.css
+++ b/css/style.css
@@ -680,13 +680,24 @@ ol li {
 }
 
 .main-page {
-  margin: 0 0 0 190px;
+  margin: 0 auto;
   padding: 0 0;
 }
 
-@media (max-width: 767px) {
+.section__topbar {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .section__topbar {
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+  .section__topbar-at-sidebar {
+    display: none;
+  }
   .main-page {
-    margin: 50px auto 0 auto;
+    margin: 0 0 0 190px;
   }
 }
 
@@ -759,8 +770,16 @@ i {
   padding-top: 10px;
 }
 
+.component__table-row .table-link {
+  position: absolute;
+  left: 45%;
+  transform: translateY(30%);
+}
+
 .component__table-row .table-font {
   display: none;
+  float: right;
+  margin-top: 5px;
 }
 
 .component__table-row:hover {
@@ -769,6 +788,12 @@ i {
 
 .component__table-row:hover .table-font {
   display: inline;
+}
+
+@media (min-width: 768px) {
+  .component__table-row .table-link {
+    left: 55%;
+  }
 }
 
 .btn {
@@ -875,27 +900,32 @@ i {
   padding-left: 10px;
 }
 
+.section__topbar-at-sidebar .topbar {
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+}
+
 @media (max-width: 767px) {
   .section__sidebar {
     width: 100%;
     height: auto;
   }
-  .navigation, .manager {
+  .navigation, .manager, .section__topbar-at-sidebar {
     display: none;
   }
-  .logo:hover ~ .navigation {
+  .show {
     display: inline;
+    z-index: 10;
   }
 }
 
 .section__topbar {
   position: fixed;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
   margin: 0 0;
   padding: 0 0;
   background: #FFFFFF;
-  width: 100%;
+  width: 100vw;
+  max-width: 1200px;
 }
 
 .section__topbar .container {
@@ -904,7 +934,7 @@ i {
   box-shadow: none;
 }
 
-.topbar {
+.section__topbar .topbar {
   -ms-flex-pack: end;
       justify-content: flex-end;
   padding: 0 0;
@@ -924,11 +954,17 @@ i {
   display: flex;
   color: #636e72;
   font-size: 16.8px;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
   -ms-flex-align: center;
       align-items: center;
   text-align: center;
+}
+
+.topbar .link p {
+  margin-bottom: 0;
+}
+
+.topbar .link i {
+  padding: 0 10px;
 }
 
 .price p {
@@ -966,17 +1002,19 @@ i {
 .calendar .input-wrapper input {
   border: 1px solid #ecf0f1;
   height: 15px;
-  width: 140px;
-  font-size: 15.4px;
+  font-size: 14px;
   color: #636e72;
+  padding-right: 0;
 }
 
 .calendar .input-wrapper input:first-of-type {
   border-width: 0 1px 0 0;
+  width: 140px;
 }
 
 .calendar .input-wrapper input:last-of-type {
   border: 0;
+  width: 120px;
 }
 
 .calendar .icon-wrapper {
@@ -993,6 +1031,7 @@ i {
   right: 10px;
   transform: translateY(-50%);
   padding: 0;
+  z-index: 1;
 }
 
 .calendar .btn-refresh {
@@ -1017,14 +1056,14 @@ i {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  max-width: 60%;
+  max-width: 70%;
   padding-left: 0;
   padding-top: 20px;
 }
 
 .component__numbers .item {
-  -ms-flex: 1;
-      flex: 1;
+  width: 100%;
+  margin: 0 20px;
 }
 
 .numbers-list .inner {
@@ -1032,14 +1071,21 @@ i {
   display: flex;
   -ms-flex-align: center;
       align-items: center;
-  text-align: right;
   border-bottom: 1px solid #ecf0f1;
-  padding: 5px;
+  padding: 0;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+}
+
+.numbers-list .inner h4 {
+  margin-bottom: 0;
 }
 
 .inner-wrapper input {
-  border-collapse: collapse;
   border: 0 solid #ecf0f1;
+  text-align: right;
+  width: 100px;
+  color: #636e72;
 }
 
 .chart {
@@ -1074,13 +1120,25 @@ i {
 }
 
 .table-wrapper {
-  margin: 40px auto;
+  margin: 10px auto;
+  width: 90%;
   padding: 5px;
 }
 
 .section__links .button-wrapper {
   text-align: center;
   margin: 40px 0;
+}
+
+@media (min-width: 992px) {
+  .component__numbers .item {
+    width: 40%;
+  }
+  .table-wrapper {
+    margin: 40px auto;
+    width: 70%;
+    padding: 5px;
+  }
 }
 
 /* Pages / Views */
