--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,11 +1,26 @@
 .main-page {
-  margin: 0 0 0 190px;
+  margin: 0 auto;
   padding: 0 0;
 }
 
-@media (max-width: 767px) {
+.section__topbar-at-sidebar {
+  // display: table;
+}
+
+.section__topbar {
+  display: none;
+}
+
+@media(min-width: 768px) {
+  .section__topbar {
+    display: inline-flex;
+  }
+
+  .section__topbar-at-sidebar {
+    display: none;
+  }
 
   .main-page {
-    margin: 50px auto 0 auto;
+    margin: 0 0 0 190px;
   }
 }
