--- a/sass/sections/_general-statistic.scss
+++ b/sass/sections/_general-statistic.scss
@@ -22,16 +22,19 @@
   input {
     border: 1px solid $color-light;
     height: 15px;
-    width: 140px;
-    font-size: $font-size*1.1;
+    font-size: $font-size;
     color: $color-dark;
+    // padding-left: 0;
+    padding-right: 0;
 
     &:first-of-type {
       border-width: 0 1px 0 0;
+      width: 140px;
     }
 
     &:last-of-type {
       border: 0;
+      width: 120px;
     }
   }
 }
@@ -48,6 +51,7 @@
     right: 10px;
     transform: translateY(-50%);
     padding: 0;
+    z-index: 1;
   }
 }
 
@@ -72,26 +76,34 @@
   margin: 10px auto;
   display: flex;
   flex-wrap: wrap;
-  max-width: 60%;
+  max-width: 70%;
   padding-left: 0;
   padding-top: 20px;
 }
 
 .component__numbers .item {
-  flex: 1;
+  width: 100%;
+  // flex: 1;
+  margin: 0 20px;
 }
 
 .numbers-list .inner {
   display: flex;
   align-items: center;
-  text-align: right;
   border-bottom: 1px solid $color-light;
-  padding: 5px;
+  padding: 0;
+  justify-content: space-between;
+
+  h4 {
+    margin-bottom: 0;
+  }
 }
 
 .inner-wrapper input {
-  border-collapse: collapse;
   border: 0 solid $color-light;
+  text-align: right;
+  width: 100px;
+  color: $color-dark;
 }
 
 .chart {
@@ -134,12 +146,24 @@
 }
 
 .table-wrapper {
-  margin: 40px auto;
-  // width: 70%;
+  margin: 10px auto;
+  width: 90%;
   padding: 5px;
 }
 
 .section__links .button-wrapper {
   text-align: center;
   margin: 40px 0;
+}
+
+@media (min-width: 992px) {
+  .component__numbers .item {
+    width: 40%;
+  }
+
+  .table-wrapper {
+    margin: 40px auto;
+    width: 70%;
+    padding: 5px;
+  }
 }
