--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -3,9 +3,9 @@
 }
 
 body {
-  margin: 0 auto;
+  margin: 0 0;
   padding: 0 20px;
-  max-width: 1200px;
+  max-width: 1250px;
   background: $color-light;
   font-family: $paragraph-font;
   font-size: $font-size;
@@ -16,9 +16,9 @@ body {
 
 .container {
   width: 100%;
-  max-width: 1170px;
-  margin: 20px auto;
-  padding: 20px 15px;
+  max-width: 1230px;
+  margin: 20px 20px;
+  padding: 20px 0;
   background: $color-white;
   box-shadow: 2px 2px 5px;
 }
