--- a/sass/components/_table-row.scss
+++ b/sass/components/_table-row.scss
@@ -1,24 +1,29 @@
 .component__table-row {
   border-bottom: 1px solid $color-light;
+  height: 58px;
 
   &:first-of-type {
     border-top: 1px solid $color-light;
   }
 
   .table-text {
-    padding-top: 10px;
+    padding-top: 5px;
+    padding-left: 10px;
   }
 
   .table-link {
-    position: absolute;
-    left: 45%;
-    transform: translateY(30%);
+    width: 30%;
+
+    a {
+      font-size: $font-size*1.1;
+    }
   }
 
   .table-font {
-    display: none;
+    // display: none;
     float: right;
-    margin-top: 5px;
+    margin-top: 10px;
+    opacity: 0;
   }
 
   &:hover {
@@ -27,6 +32,7 @@
 
   &:hover .table-font {
     display: inline;
+    opacity: 1;
   }
 }
 
@@ -34,11 +40,10 @@
 //   width: 100%;
 // }
 
-@media (min-width: 768px) {
-  .component__table-row .table-link {
-    left: 55%;
-  }
-}
+// @media (min-width: 768px) {
+//   .component__table-row .table-link {
+//   }
+// }
 
 // @media (min-width: 992px) {
 //   .component__table-row .table-link {
