--- a/sass/sections/_sidebar.scss
+++ b/sass/sections/_sidebar.scss
@@ -5,21 +5,25 @@
   background: $color-black;
   color: $color-dark;
   padding: 0 0;
+  z-index: 10;
 
   .container {
     background: $color-black;
     padding: 10px 0;
     box-shadow: none;
     margin: 0 auto;
+    align-items: center;
+    text-align: center;
   }
 }
 
 .logo {
   display: flex;
   color: $color-light;
-  padding-left: 30px;
+  // padding-left: 30px;
   align-items: center;
   text-align: center;
+  justify-content: center;
 
   h2 {
     font-family: $logo-font;
@@ -45,22 +49,31 @@
 
 .list li a {
   padding-left: 20px;
-  font-size: $font-size*0.9;
+  // font-size: $font-size*0.9;
 }
 
-.component__icon-text {
-  padding: 10px 0 5px;
+.component__icon-text, .manager-name,
+.section__topbar-at-sidebar .price,
+.section__topbar-at-sidebar .profile,
+.section__topbar-at-sidebar .notification,
+.section__topbar-at-sidebar .exit {
+  padding: 10px 30% 5px;
+  text-align: left;
+  justify-content: flex-start;
+
+  i, a, p {
+    font-size: $font-size*1.2;
+    color: $color-dark;
+  }
 
   &:hover {
     background: $color-deep-dark;
     border-left: 5px solid $brand-main-color;
 
-    i, a {
+    i, a, p {
       color: $color-light;
-    }
-
-    a {
-      padding-left: 15px;
+      font-size: $font-size*1.2;
+      transition: $transition;
     }
   }
 }
@@ -74,6 +87,7 @@
     align-items: center;
     text-align: center;
     padding-top: 5px;
+    justify-content: center;
   }
 
   img {
@@ -87,7 +101,9 @@
 }
 
 .section__topbar-at-sidebar {
-  // justify-content: space-between;
+  .container {
+    margin-top: 30px;
+  }
 
   .topbar {
     justify-content: space-between;
@@ -98,14 +114,56 @@
   .section__sidebar {
     width: 100%;
     height: auto;
+
+    .navigation, .manager, .section__topbar-at-sidebar {
+      display: none;
+    }
+
+    .show {
+      display: inline;
+      z-index: 10;
+    }
   }
 
-  .navigation, .manager, .section__topbar-at-sidebar {
-    display: none;
+  .section__topbar-at-sidebar {
+    .price, .profile, .notification, .exit {
+      width: auto;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .section__sidebar {
+    .container {
+      align-items: flex-start;
+      text-align: left;
+    }
+
+    .manager .manager-name {
+      justify-content: flex-start;
+    }
   }
 
-  .show {
-    display: inline;
-    z-index: 10;
+  .section__sidebar .container {
+    align-items: flex-start;
+    text-align: left;
+  }
+
+  .component__icon-text, .manager-name,
+  .section__topbar-at-sidebar .price,
+  .section__topbar-at-sidebar .profile,
+  .section__topbar-at-sidebar .notification,
+  .section__topbar-at-sidebar .exit {
+    padding: 10px 10px 5px 0;
+
+    i, a, p {
+      font-size: $font-size*0.9;
+    }
+
+    &:hover {
+      i, a, p {
+        font-size: $font-size*1.1;
+      }
+    }
   }
 }
