Add first modal

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,6 +12,7 @@
 @import 'components/section-part';
 @import 'components/table-row';
 @import 'components/buttons';
+@import 'components/modal';
 
 /* Sections */
 @import 'sections/sidebar';
